# SteamCleaner

./: .codecov.yml  .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  cosmic-ray.toml  pyproject.toml
.github/: dependabot.yml  zizmor.yml
.github/workflows/: ci.yml  codeql.yml  mutation.yml  release.yml  scorecard.yml  zizmor.yml
scripts/: build_windows.py
src/: main.py
src/steamcleaner/: __main__.py  app.py
src/steamcleaner/cleaner/: engine.py
src/steamcleaner/clients/: base.py  ea_app.py  epic.py  gog.py  registry.py  shared.py  steam.py  ubisoft.py
src/steamcleaner/models/: junk.py  scan_result.py
src/steamcleaner/platform/: __init__.py  base.py  linux.py  macos.py  windows.py
src/steamcleaner/scanner/: engine.py  exclusions.py  patterns.py
src/steamcleaner/ui/: cli.py
src/steamcleaner/ui/gui/: app.py  i18n.py
src/steamcleaner/ui/gui/locales/: en.json  es.json  pt-BR.json  ru.json  zh.json
src/steamcleaner/ui/tui/: app.py  screens.py
src/steamcleaner/utils/: config.py  fs.py  logging.py  vdf.py
tests/: conftest.py  helpers.py  test_cancel.py  test_cleaner.py  test_cli.py  test_config.py  test_ea_app_client.py  test_epic_client.py  test_exclusions.py  test_gog_client.py  test_gui_persistence.py  test_linux_adapter.py  test_logging.py  test_macos.py  test_models.py  test_patterns.py  test_platform.py  test_registry.py  test_scan_engine.py  test_shared.py  test_steam_client.py  test_steam_linux.py  test_steam_vdf.py  test_ubisoft_client.py  test_utils.py
tests/cleaner/: test_engine.py  test_engine_properties.py
tests/clients/: test_ea_app.py  test_epic.py  test_gog.py  test_registry.py  test_shared.py  test_steam.py  test_steam_linux.py  test_steam_vdf.py  test_ubisoft.py
tests/models/: test_models.py  test_scan_result_properties.py
tests/platform/: test_linux.py  test_macos.py  test_platform.py
tests/scanner/: test_cancel.py  test_engine.py  test_exclusions.py  test_exclusions_properties.py  test_patterns.py
tests/ui/: conftest.py  test_async.py  test_controls.py  test_i18n.py  test_logic.py  test_persistence.py
tests/utils/: test_config.py  test_fs.py  test_fs_properties.py  test_logging.py  test_vdf.py  test_vdf_properties.py
