[project]
name = "steamcleaner"
version = "0.2.0"
description = "Cross-platform tool for reclaiming disk space from game clients"
requires-python = ">=3.14"
license = "GPL-3.0-or-later"
dependencies = [
    "darkdetect>=0.8",
    "flet>=0.25",
    "send2trash>=1.8",
]

[project.scripts]
steamcleaner = "steamcleaner.app:main"

[tool.flet]
org = "dev.steamcleaner"
product = "SteamCleaner"

[tool.flet.app]
path = "src"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/steamcleaner"]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.ty.rules]
unresolved-attribute = "warn"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["steamcleaner"]
omit = [
    "src/steamcleaner/ui/*",
    "src/steamcleaner/platform/windows.py",
    "src/steamcleaner/__main__.py",
    "src/steamcleaner/app.py",
]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "except OSError",
    "pragma: no cover",
]

[dependency-groups]
dev = [
    "ruff>=0.11",
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ty>=0.0.1a7",
]
