[project]
name = "steamcleaner"
version = "1.0.0"
description = "Cross-platform tool for reclaiming disk space from game clients"
requires-python = ">=3.14"
license = "MIT"
authors = [{name = "Solganis"}]
keywords = ["steam", "epic", "gog", "ubisoft", "ea", "disk-cleanup", "cache-cleaner"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "darkdetect>=0.8",
    "flet>=0.85",
    "send2trash>=2.1",
]

[project.urls]
Repository = "https://github.com/Solganis/SteamCleaner"
Issues = "https://github.com/Solganis/SteamCleaner/issues"

[project.scripts]
steamcleaner = "steamcleaner.app:main"

[tool.flet]
org = "dev.steamcleaner"
product = "SteamCleaner"

[tool.flet.app]
path = "src"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/steamcleaner"]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
preview = true
explicit-preview-rules = true
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "RUF", "ANN"]
ignore = ["UP037", "ANN401"]  # UP037: flet bundles 3.12, forward-ref strings; ANN401: Any needed for config dicts

[tool.ruff.lint.per-file-ignores]
"src/steamcleaner/ui/*" = ["ANN001"]  # flet event-handler params are dynamically typed (no flet stubs)
"tests/*" = ["ANN"]  # tests omit -> None and fixture-param annotations by convention

[tool.ty.environment]
python-version = "3.14"
python-platform = "all"

[tool.ty.rules]
unresolved-attribute = "warn"

# winreg module has no type stubs; all registry access triggers false positives
[[tool.ty.overrides]]
include = ["src/steamcleaner/platform/windows.py"]
[tool.ty.overrides.rules]
unresolved-attribute = "ignore"

# flet controls use dynamic attributes (__init_subclass__, kwargs) with no type stubs
[[tool.ty.overrides]]
include = ["src/steamcleaner/ui/gui/app.py", "src/main.py", "tests/ui/test_persistence.py", "tests/ui/test_logic.py", "tests/ui/test_controls.py", "tests/ui/test_async.py"]
[tool.ty.overrides.rules]
unresolved-attribute = "ignore"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]
addopts = "--import-mode=importlib"

[tool.coverage.run]
branch = true
source = ["steamcleaner"]
omit = [
    "src/steamcleaner/ui/*",
    "src/steamcleaner/platform/windows.py",
    "src/steamcleaner/platform/macos.py",
    "src/steamcleaner/__main__.py",
    "src/steamcleaner/app.py",
]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "except OSError",
    "pragma: no cover",
    "if self\\.cancelled",
    "if cancel and cancel\\.is_set",
]

[dependency-groups]
dev = [
    "ruff>=0.15.18",
    "pytest>=9.0",
    "pytest-cov>=7.0",
    "ty>=0.0.52",
    "assertpy2==2.8.1",
    "hypothesis>=6.155",
]
